--- a/TA_Add2DB/webapp/index.html
+++ b/TA_Add2DB/webapp/index.html
@@ -12,6 +12,9 @@
 			data-sap-ui-oninit="module:sap/ui/core/ComponentSupport"
 			data-sap-ui-async="true"
 			data-sap-ui-frameOptions="trusted">
+			data-sap-ui-libs="sap.ui.commons"
+			data-sap-ui-libs="sap.m"
+
 		</script>
 	</head>
 	<body class="sapUiBody">
